avoiding overlap

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -205,6 +205,8 @@
 li>span.label.types{
   margin-right:30px;
   float:right;
+  padding-top: 0em;
+  padding-bottom: 0em;
 }
 
 li>span.label.types>.label{
